syntax = "proto3";
package openmatch;

option csharp_namespace = "OpenMatch";

import "api/messages.proto";
import "google/api/annotations.proto";

service FrontendService {
	rpc CreateTicket (CreateTicketRequest) returns (Ticket) {
		option (google.api.http) = {
			post: "/v1/frontendservice/tickets"
			body: "*"
		};
	}

	rpc DeleteTicket (DeleteTicketRequest) returns (Empty) {
		option (google.api.http) = {
			delete: "/v1/frontendservice/tickets/{ticket_id}"
		};
	}

	rpc GetTicket (GetTicketRequest) returns (Ticket) {
		option (google.api.http) = {
			get: "/v1/frontendservice/tickets/{ticket_id}"
		};
	}

	rpc WatchAssignments (WatchAssignmentsRequest) returns (stream WatchAssignmentsResponse) {
		option (google.api.http) = {
			get: "/v1/frontendservice/tickets/{ticket_id}/assignments"
		};
	}
}

message CreateTicketRequest {
	Ticket ticket = 1;
}

message DeleteTicketRequest {
	string ticket_id = 1;
}

message GetTicketRequest {
	string ticket_id = 1;
}

message WatchAssignmentsRequest {
	string ticket_id = 1;
}

message WatchAssignmentsResponse {
	Assignment assignment = 1;
}

message Empty { }
